feat: change name

--- a/config/_default/hugo.toml
+++ b/config/_default/hugo.toml
@@ -1,9 +1,9 @@
-baseURL = 'http://example.org/'
+baseURL = 'https://mananjadhav.in/'
 copyright = "{year}" # To make 2007 - 2022. Just add before {year} example: 2007 - {year}
 languageCode = 'en-US'
 defaultContentLanguage = 'en'
 theme = 'lowkey'
-title = 'Enhanced Lowkey Hugo'
+title = 'Manan Jadhav'
 enableRobotsTXT = true
 summaryLength = 15
 paginate = 5
