--- a/config/_default/menus.toml
+++ b/config/_default/menus.toml
@@ -21,19 +21,13 @@
     name = "Tags"
     url = "/tags"
     weight = 4
-
-[[main]]
-    identifier = "donate"
-    name = "Donate"
-    url = "https://ko-fi.com/nixentric"
-    weight = 5
     
 # Social Media Configuration
 
 [[social]]
-    identifier = "twitter"
-    name = "Twitter"
-    url = "#"
+    identifier = "linkedin"
+    name = "Linkedin"
+    url = "https://www.linkedin.com/in/mananjadhav/"
     weight = 1
 
 [[social]]
@@ -45,5 +39,5 @@
 [[social]]
     identifier = "github"
     name = "GitHub"
-    url = "#"
+    url = "https://github.com/mananjadhav"
     weight = 3
